--- a/translations/kangyur/translations/064-001_toh231-the_jewel_cloud_sutra.xml
+++ b/translations/kangyur/translations/064-001_toh231-the_jewel_cloud_sutra.xml
@@ -4,18 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog sprin</title>
-                <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་སྤྲིན།</title>
                 <title type="mainTitle" xml:lang="en">The Jewel Cloud</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Ratnamegha</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་དཀོན་མཆོག་སྤྲིན་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dkon mchog sprin ces bya ba theg
-                    pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Jewel
-                    Cloud”</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dkon mchog sprin</title>
+                <title type="mainTitle" xml:lang="bo">དཀོན་མཆོག་སྤྲིན།</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Jewel Cloud”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryaratnameghanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">寶雲經</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：佛說除蓋障菩薩所問經）</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dkon mchog sprin ces bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་དཀོན་མཆོག་སྤྲིན་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《寶雲經》 （大正藏：佛說除蓋障菩薩所問經）</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by
                     Dharmachakra Translation Committee <lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha </author>
@@ -30,11 +27,11 @@
                 <consultant role="advisor" ref="contributors.xml#person-138">Jigme Khyentse Rinpoche</consultant>
                 <consultant role="advisor" ref="contributors.xml#person-43">Khenpo Pema Namgyal</consultant>
                 <consultant role="advisor" ref="contributors.xml#person-49">Karma Ozer</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E. Ho Gu, Likai Gu, Tiffany Tai, Lillian Gu, Jerry Yen, E. E. Ho, Minda and Miin Ho, Chung Da, and Beiying Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.30.16 <date>2022</date>
+                <edition>v 1.30.17 <date>2022</date>
                 </edition>
             </editionStmt>
 <publicationStmt status="1">
@@ -69,35 +66,36 @@
                 </bibl>
             </sourceDesc>
            <notesStmt>
-               <note type="lastUpdated" date-time="2022-06-23T17:40:40.766Z" user="admin">23/06/2022 17:40:40</note>
-            <note type="updated" update="text-version" value="v 1.22" date-time="2019-03-14T11:09:33.397Z" user="john">v 1.22 2019</note>
-            <note type="updated" update="text-version" value="v 1.23" date-time="2019-03-16T12:08:02.666Z" user="john">v 1.23 2019</note>
-            <note type="updated" update="text-version" value="v 1.25" date-time="2019-05-08T10:40:36.639Z" user="mike">v 1.25 2019</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:59:55.678Z" user="admin">26/07/2022 06:59:55</note>
+                <note type="updated" update="text-version" value="v 1.22" date-time="2019-03-14T11:09:33.397Z" user="john">v 1.22 2019</note>
+                <note type="updated" update="text-version" value="v 1.23" date-time="2019-03-16T12:08:02.666Z" user="john">v 1.23 2019</note>
+                <note type="updated" update="text-version" value="v 1.25" date-time="2019-05-08T10:40:36.639Z" user="mike">v 1.25 2019</note>
                 <note type="updated" update="text-version" value="v 1.26" date-time="2019-05-31T10:19:50.077Z" user="john">v 1.26 2019</note>
                 <note type="updated" update="text-version" value="v 1.27" date-time="2019-06-17T14:44:31.153Z" user="john">v 1.27 2019</note>
                 <note type="updated" update="text-version" value="v 1.27" date-time="2019-06-19T17:54:17.352Z" user="john">v 1.27 2019</note>
                 <note type="updated" update="text-version" value="v 1.28" date-time="2019-06-21T14:39:04.391Z" user="celso">v 1.28 2019</note>
                 <note type="updated" update="text-version" value="v 1.29" date-time="2019-08-20T15:13:54.673Z" user="konchog">v 1.29 2019</note>
-<note type="updated" update="text-version" value="v 1.29.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
-<note type="updated" update="text-version" value="v 1.29.2" date-time="2019-10-08T18:51:28.972Z" user="celso">Updated Chinese title and summary</note>
-<note type="updated" update="text-version" value="v 1.29.3" date-time="2019-10-27T20:52:01.742Z" user="celso">Removed slash from wylie title</note>
-<note type="updated" update="text-version" value="v 1.30.1" date-time="2019-12-09T11:54:23.049Z" user="john">One term corrected and material added to note 66.</note>
-    <note type="updated" update="text-version" value="1.30.2" date-time="2020-08-31T19:24:27.738Z" user="laura">edited acknowledgement</note>
-    <note type="updated" update="text-version" value="1.30.3" date-time="2020-11-16T12:20:48.736Z" user="laura">Place names capitalized in Skt. in glossary</note>
-    <note type="updated" update="text-version" value="1.30.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.30.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.30.6" date-time="2021-01-04T22:34:33.637Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.30.7" date-time="2021-02-01T21:19:00.604Z" user="celso">individual liberation changed to "prātimokṣa</note>
-    <note type="updated" update="text-version" value="1.30.8" date-time="2021-03-12T18:53:41.993Z" user="celso">Non-breaking spaces before dandas</note>
-    <note type="updated" update="text-version" value="1.30.9" date-time="2021-04-22T15:42:05.949Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
-    <note type="updated" update="text-version" value="1.30.10" date-time="2021-05-14T17:13:55.085Z" user="laura">Added citation info for Toh 180</note>
-    <note type="updated" update="text-version" value="1.30.11" date-time="2021-06-26T04:08:48.16Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.30.12" date-time="2021-08-11T00:29:17.396Z" user="celso">small typo in glossary</note>
-    <note type="updated" update="text-version" value="1.30.13" date-time="2021-11-01T13:25:02.432Z" user="john">Added a note (60).</note>
-    <note type="updated" update="text-version" value="1.30.14" date-time="2021-11-02T14:08:53.292Z" user="john">Updated references to uṣṇīṣa and invisible crown, and added a glossary entry.</note>
-    <note type="updated" update="text-version" value="1.30.15" date-time="2022-03-15T19:48:36.435Z" user="laura">A couple of errors spotted by David Higgins</note>
-    <note type="updated" update="text-version" value="1.30.16" date-time="2022-06-23T17:40:36.828Z" user="john">Small corrections</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="v 1.29.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
+                <note type="updated" update="text-version" value="v 1.29.2" date-time="2019-10-08T18:51:28.972Z" user="celso">Updated Chinese title and summary</note>
+                <note type="updated" update="text-version" value="v 1.29.3" date-time="2019-10-27T20:52:01.742Z" user="celso">Removed slash from wylie title</note>
+                <note type="updated" update="text-version" value="v 1.30.1" date-time="2019-12-09T11:54:23.049Z" user="john">One term corrected and material added to note 66.</note>
+                <note type="updated" update="text-version" value="1.30.2" date-time="2020-08-31T19:24:27.738Z" user="laura">edited acknowledgement</note>
+                <note type="updated" update="text-version" value="1.30.3" date-time="2020-11-16T12:20:48.736Z" user="laura">Place names capitalized in Skt. in glossary</note>
+                <note type="updated" update="text-version" value="1.30.4" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.30.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.30.6" date-time="2021-01-04T22:34:33.637Z" user="laura">Updated colophon to Bandé</note>
+                <note type="updated" update="text-version" value="1.30.7" date-time="2021-02-01T21:19:00.604Z" user="celso">individual liberation changed to "prātimokṣa</note>
+                <note type="updated" update="text-version" value="1.30.8" date-time="2021-03-12T18:53:41.993Z" user="celso">Non-breaking spaces before dandas</note>
+                <note type="updated" update="text-version" value="1.30.9" date-time="2021-04-22T15:42:05.949Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
+                <note type="updated" update="text-version" value="1.30.10" date-time="2021-05-14T17:13:55.085Z" user="laura">Added citation info for Toh 180</note>
+                <note type="updated" update="text-version" value="1.30.11" date-time="2021-06-26T04:08:48.16Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.30.12" date-time="2021-08-11T00:29:17.396Z" user="celso">small typo in glossary</note>
+                <note type="updated" update="text-version" value="1.30.13" date-time="2021-11-01T13:25:02.432Z" user="john">Added a note (60).</note>
+                <note type="updated" update="text-version" value="1.30.14" date-time="2021-11-02T14:08:53.292Z" user="john">Updated references to uṣṇīṣa and invisible crown, and added a glossary entry.</note>
+                <note type="updated" update="text-version" value="1.30.15" date-time="2022-03-15T19:48:36.435Z" user="laura">A couple of errors spotted by David Higgins</note>
+                <note type="updated" update="text-version" value="1.30.16" date-time="2022-06-23T17:40:36.828Z" user="john">Small corrections</note>
+                <note type="updated" update="text-version" value="1.30.17" date-time="2022-07-26T06:59:53.639Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
