--- a/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
+++ b/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
@@ -4,20 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phyir mi ldog pa'i 'khor lo'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avaivartacakrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Wheel of No Reversions</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyir mi ldog pa'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">avaivartacakrasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyir mi ldog pa'i 'khor lo'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvaivartacakra­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">不退轉輪經</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：佛說廣博嚴淨不退轉輪經）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyir mi ldog pa'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《不退轉輪經 》 （大正藏：佛說廣博嚴淨不退轉輪經）</title>
                 <author role="translatorMain" ref="contributors.xml#team-35"/>
-            <author role="translatorEng" ref="contributors.xml#person-207">James B. Apple Ph.D.</author>
+                <author role="translatorEng" ref="contributors.xml#person-207">James B. Apple Ph.D.</author>
+                <consultant role="projectManager" ref="contributors.xml#person-207">James B. Apple Ph.D.</consultant>
                 <sponsor ref="sponsors.xml#sponsor-187">Chen Xinyi and family</sponsor>
-    <consultant role="projectManager" ref="contributors.xml#person-207">James B. Apple Ph.D.</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,9 +39,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:09:55.271Z" user="admin">20/12/2019 13:09:55</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:02:15.96Z" user="admin">26/07/2022 07:02:15</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:02:08.343Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
