--- a/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
+++ b/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
@@ -16,7 +16,7 @@
                 <sponsor ref="sponsors.xml#sponsor-187">Chen Xinyi and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,9 +39,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:02:15.96Z" user="admin">26/07/2022 07:02:15</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:03:35.721Z" user="admin">26/07/2022 07:03:35</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:02:08.343Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T07:03:28.941Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
