--- a/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
@@ -4,14 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi mtshan lnga stong bzhi brgya lnga bcu rtsa gsum pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">buddhanāmasahasrapañca­śatacaturtripañcadaśa</title>
                 <title type="mainTitle" xml:lang="en">The Five Thousand Four Hundred and Fifty-Three Names of the Buddha</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">buddhanāmasahasrapañca­śatacaturtripañcadaśa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi mtshan lnga stong bzhi brgya lnga bcu rtsa gsum pa/</title>
                 <title type="otherTitle" xml:lang="zh">《五千四百五十三佛名》（大正藏：《五千五百佛名神呪除障滅罪經》）</title>
-                <sponsor ref="sponsors.xml#sponsor-197">Joseph Tse and Patricia Tse</sponsor>
+                <sponsor ref="eft:sponsor-197">Joseph Tse and Patricia Tse and family, Wai Ling Tse (張惠玲), late Kwok Ying Tse(謝國英); Shu Chiao Lin (林淑嬌) and Family, late Chung Yuen Chow(鄒宗源)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date/>
+                <edition>v 0.0.7 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -29,11 +29,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-15T02:33:11.866Z" user="cabie-sim">15/06/2021 02:33:11</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:12:03.062Z" user="admin">26/07/2022 07:12:03</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:34:20.106Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:46:23.095Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-21T14:05:38.802Z" user="cabie-sim">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-15T02:33:08.669Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-21T14:05:38.802Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-15T02:33:08.669Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-03T05:09:55.499Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-03T05:10:39.006Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:12:01.07Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
