--- a/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
+++ b/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
@@ -4,14 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yang dag par spyod tshul nam mkha'i mdog
-                    gis 'dul ba'i bzod pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="en">The Sūtra on Patience with the Discipline Through Practicing in a Way that is Like The Colour of the Sky</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">samyagācāravṛtta­gaganavarṇavinaya­kṣāntisūtra</title>
-                <title type="mainTitle" xml:lang="en">The Sūtra on Patience with the Discipline
-                    Through Practicing in a Way that is Like The Colour of the Sky</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yang dag par spyod pa'i tshul
-                    nam mkha'i mdog gis 'dul ba'i bzod pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yang dag par spyod tshul nam mkha'i mdog gis 'dul ba'i bzod pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasamyagācāravṛtta­gaganavarṇavinayakṣānti­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yang dag par spyod pa'i tshul nam mkha'i mdog gis 'dul ba'i bzod pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《正行理趣虛空色調伏忍辱經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-9"/>
                 <author role="translatorEng" ref="contributors.xml#person-59">Benjamin
@@ -26,7 +23,7 @@
                 <sponsor ref="sponsors.xml#sponsor-213">Gu Yun and  Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -45,17 +42,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-05T16:25:27.883Z" user="admin">05/07/2021 16:25:27</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T07:13:03.592Z" user="admin">26/07/2022 07:13:03</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:08:09.648Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-17T13:57:27.628Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T13:35:04.385Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-10T16:44:42.824Z" user="amy">Auto (update-titles)</note>
-            
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-21T04:52:57.321Z" user="cabie-sim">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-21T04:53:25.595Z" user="cabie-sim">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-06-21T04:57:50.187Z" user="cabie-sim">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-05T16:25:24.728Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-21T04:52:57.321Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-21T04:53:25.595Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-06-21T04:57:50.187Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-05T16:25:24.728Z" user="mike">summary added</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-07-26T07:12:55.988Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
