--- a/translations/kangyur/translations/072-020_toh320-the_dharma_discourse_describing_the_benefits_of_establishing_representations_of_the_tathagatha.xml
+++ b/translations/kangyur/translations/072-020_toh320-the_dharma_discourse_describing_the_benefits_of_establishing_representations_of_the_tathagatha.xml
@@ -12,6 +12,7 @@
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryatathāgata­pratibimba­pratiṣṭhānuśaṃsa­saṃvarṇananāmadharmaparyāya</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i gzugs brnyan bzhag pa’i phan yon yang dag par brjod pa zhes bya ba’i chos kyi rnam grangs</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་གཟུགས་བརྙན་བཞག་པའི་ཕན་ཡོན་ཡང་དག་པར་བརྗོད་པ་ཞེས་བྱ་བའི་ཆོས་ཀྱི་རྣམ་གྲངས།</title>
+                <title type="otherTitle" xml:lang="zh">《留如來影像利益正說法門經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-46">Translated by the Alexander Csoma de Kőrös Translation Group<lb/>under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-292">Krisztina Teleki</author>
                 <consultant role="advisor" ref="contributors.xml#person-293">Beáta Kakas</consultant>
@@ -24,7 +25,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-108">André Rodrigues</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2021</date>
+                <edition>v 1.0.2 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -59,7 +60,7 @@
             </sourceDesc>
             
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-02T22:20:04.369Z" user="admin">02/12/2021 22:20:04</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:15:04.379Z" user="admin">26/07/2022 07:15:04</note>
                 <note type="updated" update="translation-status" value="0" date-time="2019-08-18T14:09:07.66Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-09-15T09:38:41.426Z" user="john">3</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
@@ -88,17 +89,13 @@
                 <note type="updated" update="text-version" value="0.0.15" date-time="2021-09-07T09:52:28.245Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-09-07T09:54:26.229Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.16" date-time="2021-09-07T09:54:26.229Z" user="line-tofte">Auto (update-publication-status)</note>
-            
-    <note type="updated" update="translation-status" value="2" date-time="2021-11-23T13:44:51.387Z" user="line-tofte">2</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-11-23T13:44:51.387Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="translation-status" value="1" date-time="2021-12-02T17:20:12.128Z" user="mike">1</note>
-
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-12-02T17:20:12.128Z" user="mike">First Published Version</note>
-
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-12-02T22:20:00.427Z" user="konchog">Per JC, and noticing others on my own, several fixes made to main text, notes, and glossary entries. Documented in email.</note>
-</notesStmt>
+                <note type="updated" update="translation-status" value="2" date-time="2021-11-23T13:44:51.387Z" user="line-tofte">2</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-11-23T13:44:51.387Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-12-02T17:20:12.128Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-12-02T17:20:12.128Z" user="mike">First Published Version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-12-02T22:20:00.427Z" user="konchog">Per JC, and noticing others on my own, several fixes made to main text, notes, and glossary entries. Documented in email.</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T07:14:56.732Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
         <profileDesc>
             <textClass>
