--- a/translations/kangyur/translations/074-003_toh342-the_questions_of_dirghanakha_the_wandering_mendicant.xml
+++ b/translations/kangyur/translations/074-003_toh342-the_questions_of_dirghanakha_the_wandering_mendicant.xml
@@ -4,18 +4,18 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa</title>
-                                <title type="mainTitle" xml:lang="bo">ཀུན་ཏུ་རྒྱུ་བ་སེན་རིངས་ཀྱིས་ཞུས་པ།</title>
                                 <title type="mainTitle" xml:lang="en">The Questions of Dīrghanakha the Wandering Mendicant</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Dīrghanakha­parivrājaka­paripṛcchā</title>
-                                <title type="longTitle" xml:lang="bo">ཀུན་ཏུ་རྒྱུ་བ་སེན་རིངས་ཀྱིས་ཞུས་པ་ཞེས་བྱ་བའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa zhes bya ba’i mdo</title>
+                                <title type="mainTitle" xml:lang="bo">ཀུན་ཏུ་རྒྱུ་བ་སེན་རིངས་ཀྱིས་ཞུས་པ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa</title>
                                 <title type="longTitle" xml:lang="en">The Sūtra “The Questions of Dīrghanakha the Wandering Mendicant”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Dīrghanakha­parivrājaka­paripṛcchā­nāma­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
+                                <title type="longTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa zhes bya ba’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">ཀུན་ཏུ་རྒྱུ་བ་སེན་རིངས་ཀྱིས་ཞུས་པ་ཞེས་བྱ་བའི་མདོ།</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">Dīrghanakha­paripṛcchā­sūtra</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa’i mdo/</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">Dīrghanakha­parivrājaka­paripṛcchā­sūtra</title>
+                                <title type="otherTitle" xml:lang="Bo-Ltn">kun tu rgyu ba sen rings kyis zhus pa’i mdo/</title>
+                                <title type="otherTitle" xml:lang="zh">《梵誌長爪所問經》（大正藏：《長爪梵誌請問經》）</title>
                                 <author role="translatorMain" ref="contributors.xml#team-39">Translated by the Kīrtimukha Translation Group<lb/>under
                                         the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                                 <author role="translatorEng" ref="contributors.xml#person-95">Celso Wilkinson</author>
@@ -30,7 +30,7 @@
                                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -63,8 +63,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-06-03T14:32:35.099Z" user="admin">03/06/2022 14:32:35</note>
-
+                                <note type="lastUpdated" date-time="2022-07-26T07:15:54.346Z" user="admin">26/07/2022 07:15:54</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:18:38.292Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-24T14:31:34.245Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-24T14:31:34.245Z" user="line-tofte">Auto
@@ -98,16 +97,15 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-10-01T12:50:44.848Z" user="line-tofte">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.13" date-time="2021-10-01T12:50:44.848Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                        
-    <note type="updated" update="translation-status" value="2" date-time="2021-10-27T13:27:43.982Z" user="line-tofte">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-27T13:27:43.982Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-27T13:28:13.759Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-11-02T17:49:54.859Z" user="mike">1</note>
-
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T17:49:54.859Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-03T01:01:46.604Z" user="celso">activated pending link toh 10</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-03T14:32:31.248Z" user="celso">removed rend="pending" tag</note>
-</notesStmt>
+                                <note type="updated" update="translation-status" value="2" date-time="2021-10-27T13:27:43.982Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-27T13:27:43.982Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-27T13:28:13.759Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-11-02T17:49:54.859Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-11-02T17:49:54.859Z" user="mike">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-03T01:01:46.604Z" user="celso">activated pending link toh 10</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-03T14:32:31.248Z" user="celso">removed rend="pending" tag</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-26T07:15:46.695Z" user="cabie-sim">Auto (update-titles)</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
