--- a/translations/kangyur/translations/076-001_toh347-the_account_of_the_noble_deeds_of_punyabala.xml
+++ b/translations/kangyur/translations/076-001_toh347-the_account_of_the_noble_deeds_of_punyabala.xml
@@ -4,10 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bsod nams kyi stobs kyi rtogs pa brjod pa</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Puṇyabalāvadāna</title>
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Puṇyabala</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Puṇyabalāvadāna</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bsod nams kyi stobs kyi rtogs pa brjod pa</title>
                 <title type="mainTitle" xml:lang="bo">བསོད་ནམས་ཀྱི་སྟོབས་ཀྱི་རྟོགས་པ་བརྗོད་པ།</title>
+                <title type="otherTitle" xml:lang="zh">《福力譬喻經》（大正藏：《佛說福力太子因緣經》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-19">Translated by the Lokākṣi Translator Group<lb/>
                     under the patronage and supervision of 84000: Translating the Words of the Buddha
                 </author>
@@ -24,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2021</date>
+                <edition>v 1.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -56,7 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-09T12:14:51.678Z" user="admin">09/06/2021 12:14:51</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:18:43.274Z" user="admin">26/07/2022 07:18:43</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-04T09:08:48.745Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2019-12-04T09:08:48.745Z" user="andreas">2.f</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-01-27T13:06:34.46Z" user="mike">2.g</note>
@@ -65,7 +66,6 @@
                 <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-20T12:14:44.376Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2021-01-04T15:57:36.467Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.3" date-time="2021-01-04T15:57:36.467Z" user="line-tofte">Auto (update-publication-status)</note>
-
                 <note type="updated" update="translation-status" value="2.d" date-time="2021-01-18T14:33:46.871Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.1.4" date-time="2021-01-18T14:33:46.871Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.5" date-time="2021-01-18T14:34:15.125Z" user="line-tofte">Auto (update-contributors)</note>
@@ -74,18 +74,18 @@
                 <note type="updated" update="text-version" value="0.1.7" date-time="2021-02-01T19:43:50.782Z" user="mike">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-02-01T19:44:27.691Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.1.8" date-time="2021-02-01T19:44:27.691Z" user="mike">Auto (update-publication-status)</note>
-            
-    <note type="updated" update="text-version" value="0.1.9" date-time="2021-02-17T19:07:19.807Z" user="andre">Auto (update-titles)</note>
-    <note type="updated" update="translation-status" value="2" date-time="2021-03-02T22:28:50.418Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.1.10" date-time="2021-03-02T22:28:50.418Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.11" date-time="2021-03-08T09:56:54.041Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-03-08T14:57:28.464Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-03-08T14:57:28.464Z" user="mike">First Published Version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-03-15T12:49:17.617Z" user="konchog">Many tiny fixes through all sections, detailed in an email sent 3/14.</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-03-15T22:45:21.821Z" user="konchog">In consultation with John, discovered and corrected many errors throughout the sections. Please watch for Skt proper names not capitalized in the glossary entries!</note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-03-15T23:16:43.074Z" user="konchog">Fixed incorrect volume reference on title page.</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2021-02-17T19:07:19.807Z" user="andre">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2021-03-02T22:28:50.418Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="0.1.10" date-time="2021-03-02T22:28:50.418Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.11" date-time="2021-03-08T09:56:54.041Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-03-08T14:57:28.464Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-03-08T14:57:28.464Z" user="mike">First Published Version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-03-15T12:49:17.617Z" user="konchog">Many tiny fixes through all sections, detailed in an email sent 3/14.</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2021-03-15T22:45:21.821Z" user="konchog">In consultation with John, discovered and corrected many errors throughout the sections. Please watch for Skt proper names not capitalized in the glossary entries!</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2021-03-15T23:16:43.074Z" user="konchog">Fixed incorrect volume reference on title page.</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2021-04-28T14:11:33.043Z" user="mike">Sanskrit typos corrected</note>
-    <note type="updated" update="text-version" value="1.0.5" date-time="2021-06-09T12:14:46.981Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2021-06-09T12:14:46.981Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-26T07:18:35.61Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
