--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -4,24 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">stag rna'i rtogs pa brjod pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śārdūlakarṇāvadāna</title>
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Śārdūlakarṇa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">śārdūlakarṇāvadāna</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">stag rna'i rtogs pa brjod pa/</title>
                 <title type="otherTitle" xml:lang="en">The Story of Śārdūlakarṇa</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śārdūlakarṇāvadāna</title>
-                <title type="otherTitle" xml:lang="zh">《虎耳譬喻經》</title>
-                <title type="otherTitle" xml:lang="zh">(大正藏：摩登伽經)</title>
+                <title type="otherTitle" xml:lang="zh">《虎耳譬喻經》 (大正藏：摩登伽經)</title>
                 <author role="translatorMain" ref="contributors.xml#team-14"/>
-            <editor role="externalReviewer" ref="contributors.xml#person-288">Kurtis Schaeffer</editor>
+                <editor role="externalReviewer" ref="contributors.xml#person-288">Kurtis Schaeffer</editor>
                 <editor role="projectEditor" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-    <editor role="projectEditor" ref="contributors.xml#person-262">David Higgins</editor>
+                <editor role="projectEditor" ref="contributors.xml#person-262">David Higgins</editor>
                 <author role="translatorEng" ref="contributors.xml#person-99">Thomas Cruijsen</author>
-
-<sponsor ref="sponsors.xml#sponsor-198">Shin Nomura</sponsor>
-    <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
+                <sponsor ref="sponsors.xml#sponsor-198">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.0 <date>2019</date>
+                <edition>v 0.1.1 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,12 +39,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-24T12:20:40.615Z" user="admin">24/04/2020 12:20:40</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T10:03:11.652Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-11-04T10:03:11.652Z" user="andreas">3</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-04T08:32:10.007Z" user="line-tofte">2.h</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2020-06-02T09:55:23.516Z" user="line-tofte">2.g</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:19:28.822Z" user="admin">26/07/2022 07:19:28</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T10:03:11.652Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-11-04T10:03:11.652Z" user="andreas">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-04T08:32:10.007Z" user="line-tofte">2.h</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-06-02T09:55:23.516Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-07-26T07:19:26.842Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
