--- a/translations/kangyur/placeholders/077-010_toh369-appendix_to_the_discourse_tantra.xml
+++ b/translations/kangyur/placeholders/077-010_toh369-appendix_to_the_discourse_tantra.xml
@@ -4,13 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mngon brjod rgyud bla ma/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">abhidhānottaratantra</title>
                 <title type="mainTitle" xml:lang="en">Appendix to the Discourse Tantra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">mngon par brjod pa'i rgyud bla ma zhes
-                    bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">abhidhānottaratantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mngon brjod rgyud bla ma/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">abhidhanottaratantranāma</title>
-                <title type="otherTitle" xml:lang="zh">善說無上續</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">mngon par brjod pa'i rgyud bla ma zhes bya ba/</title>
+                <title type="otherTitle" xml:lang="zh">《善說無上續》</title>
                 <author role="translatorMain" ref="contributors.xml#team-1"/>
                 <author role="translatorEng" ref="contributors.xml#person-1">Dr. David B.
                     Gray</author>
@@ -20,7 +19,7 @@
                 <sponsor ref="sponsors.xml#sponsor-206">Kelvin Lee</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,15 +39,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-10-06T03:53:26.107Z" user="cabie-sim">06/10/2021 03:53:26</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T07:20:10.245Z" user="admin">26/07/2022 07:20:10</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-28T13:02:09.44Z" user="line-tofte">Auto
                     (update-contributors)</note>
-            
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-05T16:19:17.035Z" user="mike">Summary added</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-06T03:53:22.754Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-05T16:19:17.035Z" user="mike">Summary added</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-06T03:53:22.754Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-26T07:20:02.683Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
