--- a/translations/kangyur/placeholders/078-003_toh372-ocean_of_dakas_a_yoginitantra.xml
+++ b/translations/kangyur/placeholders/078-003_toh372-ocean_of_dakas_a_yoginitantra.xml
@@ -4,12 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mkha' 'gro rgya mtsho rnal 'byor ma'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ḍākarṇavamahāyoginītantrarāja</title>
                 <title type="mainTitle" xml:lang="en">Ocean of Ḍākas, a Yoginītantra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal mkha' 'gro rgya mtsho rnal 'byor ma'i rgyud kyi rgyal po chen po zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ḍākarṇavamahāyoginītantrarāja</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mkha' 'gro rgya mtsho rnal 'byor ma'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīḍākarṇavamahāyoginī­tantrarājanāma</title>
-                <title type="otherTitle" xml:lang="zh">吉祥空行海瑜伽母續王</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal mkha' 'gro rgya mtsho rnal 'byor ma'i rgyud kyi rgyal po chen po zhes bya ba/</title>
+                <title type="otherTitle" xml:lang="zh">《吉祥空行海瑜伽母續王》</title>
                 <author role="translatorMain" ref="contributors.xml#team-8"/>
                 <author role="translatorEng" ref="contributors.xml#person-1">Dr. David B. Gray</author>
                 <consultant role="projectManager" ref="contributors.xml#person-1">Dr. David B. Gray</consultant>
@@ -20,7 +20,7 @@
                 <sponsor ref="sponsors.xml#sponsor-51">Samay NZ Ltd, HMT, Shirley Sun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,10 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-14T14:56:18.385Z" user="admin">14/04/2021 14:56:18</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:56:14.026Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:21:06.585Z" user="admin">26/07/2022 07:21:06</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:56:14.026Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T07:20:58.956Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
