--- a/translations/kangyur/placeholders/080-003_toh419-the_tantra_of_the_vajra_cage.xml
+++ b/translations/kangyur/placeholders/080-003_toh419-the_tantra_of_the_vajra_cage.xml
@@ -9,14 +9,14 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje gur gyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaḍākinīvajrapañjara­mahātantrarājākalpanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mkha' 'gro ma rdo rje gur zhes bya ba'i rgyud kyi rgyal po chen po'i brtag pa/</title>
-                <title type="otherTitle" xml:lang="zh">金剛帳續</title>
+                <title type="otherTitle" xml:lang="zh">《金剛帳續》</title>
                 <author role="translatorMain" ref="eft:team-9"/>
                 <author role="translatorEng" ref="eft:person-54">Thomas Doctor</author>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <sponsor ref="sponsors.xml#sponsor-187">Chen Sin I and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -35,15 +35,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-19T10:56:57.034Z" user="admin">19/11/2021 10:56:57</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:22:36.15Z" user="admin">26/07/2022 07:22:36</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:57:54.998Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:57:54.998Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:25:34.687Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-31T08:24:33.954Z" user="amy">Auto (update-sponsorship)</note>
-            
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-22T11:13:48.081Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-19T10:56:51.269Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-22T11:13:48.081Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-19T10:56:51.269Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T07:22:28.512Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
