--- a/translations/kangyur/translations/088-007_toh513,856-the_incantation_that_has_the_attributes_of_all_buddhas.xml
+++ b/translations/kangyur/translations/088-007_toh513,856-the_incantation_that_has_the_attributes_of_all_buddhas.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī Endowed with the Attributes of All the Buddhas</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarva­buddhāṅgavatī­dhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas thams cad kyi yan lag dang ldan pa’i gzungs</title>
                 <title type="mainTitle" xml:lang="bo">སངས་རྒྱས་ཐམས་ཅད་ཀྱི་ཡན་ལག་དང་ལྡན་པའི་གཟུངས།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Sarva­buddhāṅgavatī­dhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Dhāraṇī Endowed with the Attributes of All the Buddhas</title>
+                <title type="mainTitle" xml:lang="zh">《諸佛支具陀羅尼》（大正藏：《諸佛集會陀羅尼經》）</title>
+                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “Endowed with the Attributes of All the Buddhas”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­buddhāṅgavatī­nāma­dhāraṇī</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sangs rgyas thams cad kyi yan lag dang ldan pa zhes bya ba’i gzungs</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">འཕགས་པ་སངས་རྒྱས་ཐམས་ཅད་ཀྱི་ཡན་ལག་དང་ལྡན་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­buddhāṅgavatī­nāma­dhāraṇī</title>
-                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “Endowed with the Attributes of All the Buddhas”</title>
-                <title xml:lang="zh">諸佛集會陀羅尼經</title>
                 <author role="translatorMain" ref="contributors.xml#team-62"/>
                 <author role="translatorEng" ref="contributors.xml#person-226">David Gitlen</author>
                 <editor role="associateEditor" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2021</date>
+                <edition>v 1.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -69,7 +69,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-03T13:40:19.895Z" user="admin">03/05/2021 13:40:19</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:29:34.456Z" user="admin">26/07/2022 07:29:34</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-06-21T07:07:37.133Z" user="john">2.e</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-07-28T02:10:47.602Z" user="dion-blundell">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T05:59:48.729Z" user="andreas">v 0.1.0</note>
@@ -88,16 +88,17 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-03-08T09:29:34.725Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2021-03-08T09:29:34.725Z" user="mike">Auto
                     (update-publication-status)</note>
-            
-    <note type="updated" update="translation-status" value="2" date-time="2021-03-11T14:37:35.648Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-11T14:37:35.648Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-16T13:38:13.858Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2021-03-11T14:37:35.648Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-11T14:37:35.648Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-16T13:38:13.858Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-27T15:25:00.971Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2021-05-03T11:55:33.253Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-05-03T11:55:33.253Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-05-03T12:57:32.115Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-05-03T13:40:16.746Z" user="john">minor edits</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-05-06T10:46:16.807Z" user="mike">Typo fixed</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T07:29:26.805Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -124,9 +125,10 @@
             </div>
             <div type="introduction">
                 <head type="introduction" tid="8">Introduction</head>
-                <milestone unit="chunk" xml:id="UT22084-088-007-3"/>
+                <div type="section" xml:id="UT22084-088-007-introduction-1">
+                    <milestone unit="chunk" xml:id="UT22084-088-007-3"/>
                 <p tid="9">
-                    <title xml:lang="en">The Dhāraṇī Endowed with the Attributes of All the Buddhas </title>records an encounter between the Buddha and
+                        <title xml:lang="en">The Dhāraṇī Endowed with the Attributes of All the Buddhas </title>records an encounter between the Buddha and
                     the four guardians of the world at an unspecified site on the banks of the Ganges River. The Buddha himself initiates the dialogue,
                     describing four great fears—aging, sickness, decrepitude, and death—declaring death to be the chief among them, and promising to provide
                     remedies for them. With a snap of his fingers, the Buddha summons the attention and presence of buddhas throughout the reaches of space in
@@ -171,6 +173,7 @@
                 <milestone unit="chunk" xml:id="UT22084-088-007-8"/>
                 <p tid="11">This English translation was produced based on both Toh 513 and Toh 856 in the Degé Kangyur in consultation with the Comparative
                     Edition (<foreign xml:lang="Bo-Ltn">dpe bsdur ma</foreign>), the Stok Palace Kangyur, and the Chinese translation (Taishō 1346). </p>
+                </div>
             </div>
         </front>
         <body>
@@ -368,23 +371,24 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-088-007-51">
+                        <gloss xml:id="UT22084-088-007-51" type="person" mode="match">
                             <term>lord of the guhyaka</term>
-                            <term xml:lang="Bo-Ltn">gsang ba pa’i bdag po </term>
+                            <term xml:lang="Bo-Ltn">gsang ba pa’i bdag po</term>
                             <term xml:lang="bo">གསང་བ་པའི་བདག་པོ།</term>
                             <term xml:lang="Sa-Ltn">Guhyakādhipati</term>
+                            <term type="alternative">lords of the guhyaka</term>
                             <term type="definition">Epithet of Vaiśravaṇa.</term>
-                        <term type="alternative">lords of the guhyaka</term>
                         </gloss>
                     </item>
                     
                     <item>
-                        <gloss type="term" xml:id="UT22084-088-007-53">
+                        <gloss xml:id="UT22084-088-007-53" type="term" mode="match">
                             <term>upāsaka (precepts)</term>
-                            <term xml:lang="Bo-Ltn"/>
+                            <term xml:lang="Bo-Ltn">dge bsnyen</term>
+                            <term xml:lang="bo">དགེ་བསྙེན།</term>
                             <term xml:lang="Sa-Ltn">upāsaka</term>
-                        <term type="alternative">upāsaka</term>
-                        <term type="definition">The upāsaka precepts for lay practitioners include the five fundamental vows (<foreign xml:lang="Sa-Ltn" type="term">pañcaśīla</foreign>) not to (1) kill, (2) steal, (3) commit sexual misconduct, (4) lie, or (5) use intoxicants. Additionally, three other precepts are taken on full-moon and new-moon days for a total of eight (<foreign type="term" xml:lang="Sa-Ltn">aṣṭāṅgaśīla</foreign>): not to (6) eat after the noon meal, (7) engage in entertainment or adorn oneself with ornaments or cosmetics, or (8) sleep on high beds.</term>
+                            <term type="alternative">upāsaka</term>
+                            <term type="definition">The upāsaka precepts for lay practitioners include the five fundamental vows (<foreign xml:lang="Sa-Ltn" type="term">pañcaśīla</foreign>) not to (1) kill, (2) steal, (3) commit sexual misconduct, (4) lie, or (5) use intoxicants. Additionally, three other precepts are taken on full-moon and new-moon days for a total of eight (<foreign type="term" xml:lang="Sa-Ltn">aṣṭāṅgaśīla</foreign>): not to (6) eat after the noon meal, (7) engage in entertainment or adorn oneself with ornaments or cosmetics, or (8) sleep on high beds.</term>
                         </gloss>
                     </item>
                     <item>
