--- a/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -14,7 +14,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.2 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -41,8 +41,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:43:03.124Z" user="admin">26/07/2022 07:43:03</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:43:40.961Z" user="admin">26/07/2022 07:43:40</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:43:01.139Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:43:38.955Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
