--- a/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
+++ b/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
@@ -13,6 +13,7 @@
                 <title type="longTitle" xml:lang="bo">རྡོ་རྗེ་རྣམ་པར་འཇོམས་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">rdo rje rnam par ’joms pa zhes bya ba’i gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rjes rnam par ’joms pa zhes bya ba’i gzungs</title>
+                <title type="otherTitle" xml:lang="zh">《金剛摧破陀羅尼》（大藏經：《佛說壞相金剛陀羅尼經》）</title>
                 <author role="translatorMain" ref="eft:team-9">Translated by The Dharmachakra Translation Committee<lb/>under the patronage and
                     supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="eft:person-76">Wiesiek Mical</author>
@@ -28,7 +29,7 @@
                 <editor role="finalReviewer" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -70,8 +71,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-02T22:09:41.993Z" user="admin">02/05/2022 22:09:41</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T07:45:35.553Z" user="admin">26/07/2022 07:45:35</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2021-03-24T11:24:42.397Z" user="line-tofte">2.g</note>
@@ -108,37 +108,27 @@
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2021-11-22T15:37:45.361Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-11-22T15:39:02.84Z" user="line-tofte">2.a</note>
-
                 <note type="updated" update="text-version" value="0.0.16" date-time="2021-11-22T15:39:02.84Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.17" date-time="2021-11-23T09:42:48.862Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2021-12-01T09:17:11.531Z" user="line-tofte">2</note>
-
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-01T09:17:11.531Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-01T10:55:34.487Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="1" date-time="2021-12-11T19:43:16.552Z" user="john">1</note>
-
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-12-11T19:43:16.552Z" user="john">Final check and
                     edits.</note>
-
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-12-11T21:42:49.865Z" user="john">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-12-11T21:45:37.383Z" user="john">1.0.3</note>
-
                 <note type="updated" update="text-version" value="1.0.4" date-time="2021-12-12T11:37:04.703Z" user="john">1.0.4</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-02-09T18:37:08.927Z" user="laura">Typo submitted by reader at
                     1.2: "Though the power of the Buddha..."</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-05-02T22:09:38.212Z" user="laura">Revisions from translator</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-26T07:45:27.908Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
