--- a/translations/kangyur/placeholders/097-001_toh828-the_sovereign_allcreating_mind_of_enlightenment.xml
+++ b/translations/kangyur/placeholders/097-001_toh828-the_sovereign_allcreating_mind_of_enlightenment.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems kun byed rgyal po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bodhicittakulayarāja</title>
                 <title type="mainTitle" xml:lang="en">The Sovereign, All-Creating Mind of Enlightenment</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">chos thams cad rdzogs pa chen po byang chub kyi sems kun byed rgyal po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bodhicittakulayarāja</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems kun byed rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvadharmamahāśantibodhicitta­kulayarāja</title>
-                <title type="otherTitle" xml:lang="zh">一切法大圓滿菩提心普作王</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">chos thams cad rdzogs pa chen po byang chub kyi sems kun byed rgyal po/</title>
+                <title type="otherTitle" xml:lang="zh">《一切法大圓滿菩提心普作王》</title>
                 <author role="translatorMain" ref="contributors.xml#team-7"/>
-            <sponsor ref="sponsors.xml#sponsor-7">Anonymous</sponsor>
                 <author role="translatorEng" ref="contributors.xml#person-27">Gregory Forgues</author>
-    <consultant role="projectManager" ref="contributors.xml#person-27">Gregory Forgues</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-27">Gregory Forgues</consultant>
+                <sponsor ref="sponsors.xml#sponsor-7">Anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,9 +36,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:07:30.664Z" user="admin">20/12/2019 13:07:30</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:46:26.685Z" user="admin">26/07/2022 07:46:26</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:46:19.084Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
